--- a/OData.InvalidOperationException/OData.InvalidOperationException.csproj
+++ b/OData.InvalidOperationException/OData.InvalidOperationException.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
